Fixed conflicts caused by overlapping new changes with this branch

--- a/TCSA.V2/wwwroot/tailwind.css
+++ b/TCSA.V2/wwwroot/tailwind.css
@@ -589,14 +589,6 @@ a {
   margin-top: 1rem;
 }
 
-.tw-mt-6 {
-  margin-top: 1.5rem;
-}
-
-.tw-mt-10 {
-  margin-top: 2.5rem;
-}
-
 .tw-inline {
   display: inline;
 }
